# FunASR

funasr/runtime/onnxruntime/: CMakeLists.txt
funasr/runtime/onnxruntime/include/: audio.h  funasrruntime.h  model.h
funasr/runtime/onnxruntime/src/: CMakeLists.txt  audio.cpp  funasrruntime.cpp  offline-stream.cpp  paraformer-torch.cpp  paraformer-torch.h  precomp.h
funasr/runtime/python/websocket/: README.md
funasr/runtime/websocket_client/: CMakeLists.txt  audio.cpp  funasr-wss-client.cpp  readme.md  resample.cpp  resample.h
funasr/runtime/websocket_client/include/: audio.h  tclap
